check domain before install

--- a/supervisor/conf.d/nginx.conf
+++ b/supervisor/conf.d/nginx.conf
@@ -1,5 +1,5 @@
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
+command=/usr/sbin/nginx
 autostart=true
 autorestart=true
 startretries=5
